--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,42 @@
   align-items: center;
   color: whitesmoke;
 }
+
+.tweetForm-container {
+  height: 220px;
+  display: flex;
+  justify-content: center;
+  background-color: rgba(21, 7, 20, 1);
+}
+
+.tweetForm-container > div {
+  width: 50%;
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  color: whitesmoke;
+}
+
+.tweetForm-photo {
+  width: 70px;
+  height: 70px;
+  border: solid 1px;
+  border-radius: 50px;
+  border-color: yellow;
+}
+
+form {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+form div {
+  margin: 14px 0px 14px 0px;
+}
+
+textarea {
+  width: 100%;
+  height: 113px;
+}
