--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,28 @@ textarea {
   width: 100%;
   height: 113px;
 }
+
+.feed {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(46, 19, 44, 1);
+}
+
+.tweet-container {
+  width: 50%;
+  padding: 20px 0px 20px 0px;
+  display: flex;
+  justify-content: space-between;
+  color: whitesmoke;
+}
+
+.tweet-data {
+  width: 80%;
+}
+
+.tweet-data div {
+  display: flex;
+  justify-content: space-between;
+}
