--- a/src/App.css
+++ b/src/App.css
@@ -212,3 +212,77 @@ textarea {
   line-height: 24px;
   color: whitesmoke;
 }
+
+.username-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* font-family: Silkscreen; */
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+}
+
+.username-header img {
+  margin-right: 22px;
+}
+
+.username-container {
+  height: 240px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgba(21, 7, 20, 1);
+}
+
+.username {
+  height: 40px;
+  padding: 5px;
+  /* font-family: Silkscreen; */
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: rgba(21, 7, 20, 1);
+}
+
+.username-pic {
+  height: 134px;
+  border-radius: 50%;
+  border: solid 2px rgba(255, 234, 92, 1);
+}
+
+.tabs-container {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(21, 7, 20, 1);
+}
+
+.tabs-container > div {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
+
+.tabs {
+  width: 50%;
+  height: 50px;
+  color: rgba(96, 38, 91, 1);
+  /* font-family: Silkscreen; */
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.selected {
+  background-color: rgba(96, 38, 91, 1);
+  color: rgba(21, 7, 20, 1);
+}
